added readme and updated studio

--- a/app/src/main/res/layout/activity_main6.xml
+++ b/app/src/main/res/layout/activity_main6.xml
@@ -25,6 +25,7 @@
         android:ems="10"
         android:hint="@string/gameEnterT"
         android:inputType="number"
+        android:textColorHint="#8D6E63"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +65,7 @@
         android:ems="10"
         android:hint="@string/min"
         android:inputType="number"
+        android:textColorHint="#8D6E63"
         app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +80,7 @@
         android:ems="10"
         android:hint="@string/max"
         android:inputType="number"
+        android:textColorHint="#8D6E63"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/editTextNumber"
